Fix flickering and premature api requests

--- a/client/src/components/Loading/Loading.scss
+++ b/client/src/components/Loading/Loading.scss
@@ -6,8 +6,8 @@
 }
 
 .Loading {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 80vmin;
   display: flex;
   justify-content: center;
   align-items: center;
